# PC-voice-control

./: README.md  docker-compose.yaml  pyproject.toml
voice_recording/: __main__.py  settings.py  uttils.py
voice_recording/c3/: cloud.py
voice_recording/c3/writer/: __init__.py  base.py  cloud_operator.py  local_operator.py  writer.py
voice_recording/run_command/: __init__.py  generate_command.py
